app-service-v1-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service-v1
spec:
  selector:
    app: myapp
    version: v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: app-service-v2
spec:
  selector:
    app: myapp
    version: v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
